--- a/views/server/install.jade
+++ b/views/server/install.jade
@@ -1,23 +1,27 @@
 extends layout-blank
 
 block content
-    .container
+    section#login-container
         .row
-            .register
-                form(action='', method='post')
-                    h2 后台初始化
-                    .form-group
-                        label 用户名
-                        input.form-control(name='username')
-                    .form-group
-                        label 密码
-                        input.form-control(type='password', name='password')
-                    .form-group
-                        label 姓名
-                        input.form-control(name='name')
-                    .form-group
-                        label Email
-                        input.form-control(name='email')
-                    input(type='hidden', name='_csrf', value='#{token}')
-                    button.btn.btn-primary(type='submit') 提交
+            #login-wrapper.col-md-3
+                .panel.panel-primary
+                    .panel-heading
+                        h3.panel-title
+                            | 后台初始化
+                    .panel-body
+                        form(role='form', action='', method='post')
+                            .form-group
+                                label(for='exampleInputEmail1') 用户名
+                                input#exampleInputEmail1.form-control(type='text', name='username', placeholder='请输入用户名', autofocus)
+                            .form-group
+                                label(for='exampleInputPassword1') 密码
+                                input#exampleInputPassword1.form-control(type='password', name='password', placeholder='请输入密码')
+                            .form-group
+                                label(for='exampleInputPassword1') 姓名
+                                input#exampleInputPassword1.form-control(type='text', name='name', placeholder='请输入姓名')
+                            .form-group
+                                label(for='exampleInputPassword1') Email
+                                input#exampleInputPassword1.form-control(type='email', name='email', placeholder='请输入Email')
+                            input(type='hidden', name='_csrf', value='#{token}')
+                            button.btn.btn-primary.btn-block(type='submit') 提交
 
