--- a/views/server/me.jade
+++ b/views/server/me.jade
@@ -10,6 +10,9 @@ block content
                     | 管理员资料信息
                 ul.list-group
                     li.list-group-item
+                        - var avatar = User.avatar || gravatar.url(User.email, {s: '100',r: 'x',d: 'retro'}, true)
+                        img.img-circle(src='#{avatar}', alt='')
+                    li.list-group-item
                         .row
                             .col-md-2
                                 strong 用户ID
@@ -67,16 +70,16 @@ block content
                         .form-group
                             label.col-md-2.text-right 旧密码
                             .col-md-4
-                                input.form-control(type='text', name='oldpassword')
+                                input.form-control(type='password', name='oldpassword')
                         .form-group
                             label.col-md-2.text-right 新密码
                             .col-md-4
-                                input.form-control(type='text', name='password')
+                                input.form-control(type='password', name='password')
                         .form-group
                             label.col-md-2.text-right 确认新密码
                             .col-md-4
-                                input.form-control(type='text', name='repassword')
-                        //input(type='hidden', name='_csrf', value='#{token}')
+                                input.form-control(type='password', name='repassword')
+                        input(type='hidden', name='_csrf', value='#{token}')
                         .form-group
                             .col-md-4.col-md-offset-2
                                 button.btn.btn-primary(type='submit') 提交
