静态资源url优化

--- a/views/server/file/edit.jade
+++ b/views/server/file/edit.jade
@@ -1,6 +1,6 @@
 extends ../layout
 block head-css
-    link(rel='stylesheet', href='/js/upload/css/jquery.fileupload.css')
+    link(rel='stylesheet', href='/assets/plugins/upload/css/jquery.fileupload.css')
 block content
     .row
         .col-md-12
@@ -26,16 +26,16 @@ block content
                 button.btn.btn-primary(type='submit') 提交
 
 block foot-js
-    script(src='/js/upload/js/vendor/jquery.ui.widget.js')
-    script(src='/js/load-image/js/load-image.min.js')
-    //script(src='/js/vendor/canvas-to-blob.min.js')
-    script(src='/js/upload/js/jquery.iframe-transport.js')
-    script(src='/js/upload/js/jquery.fileupload.js')
-    <script src="/js/upload/js/jquery.fileupload-process.js"></script>
-    <script src="/js/upload/js/jquery.fileupload-image.js"></script>
-    <script src="/js/upload/js/jquery.fileupload-audio.js"></script>
-    <script src="/js/upload/js/jquery.fileupload-video.js"></script>
-    <script src="/js/upload/js/jquery.fileupload-validate.js"></script>
+    script(src='/assets/plugins/upload/js/vendor/jquery.ui.widget.js')
+    script(src='/assets/plugins/load-image/js/load-image.min.js')
+    //script(src='/assets/js/vendor/canvas-to-blob.min.js')
+    script(src='/assets/plugins/upload/js/jquery.iframe-transport.js')
+    script(src='/assets/plugins/upload/js/jquery.fileupload.js')
+    <script src="/assets/plugins/upload/js/jquery.fileupload-process.js"></script>
+    <script src="/assets/plugins/upload/js/jquery.fileupload-image.js"></script>
+    <script src="/assets/plugins/upload/js/jquery.fileupload-audio.js"></script>
+    <script src="/assets/plugins/upload/js/jquery.fileupload-video.js"></script>
+    <script src="/assets/plugins/upload/js/jquery.fileupload-validate.js"></script>
 
     script.
         $(function () {
