--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -2,8 +2,8 @@ doctype html
 html
     head
         title #{title}
-        link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
-        link(rel='stylesheet', href='/css/style.css')
+        link(rel='stylesheet', href='/assets/plugins/bootstrap/css/bootstrap.min.css')
+        link(rel='stylesheet', href='/assets/css/style.css')
         block head-css
         block head-js
     body
@@ -20,6 +20,6 @@ html
                     a.cms-nav-item(class=Path === 'content' ? 'active' : '',href='/content') 内容
                     a.cms-nav-item(class=Path === 'comment' ? 'active' : '',href='/comment') 评论
         block content
-        script(src='/js/vendor/jquery-2.1.1.min.js')
-        script(src='/bootstrap/js/bootstrap.min.js')
+        script(src='/assets/js/vendor/jquery-2.1.1.min.js')
+        script(src='/assets/pluginsbootstrap/js/bootstrap.min.js')
         block foot-js
