--- a/views/server/content/item.jade
+++ b/views/server/content/item.jade
@@ -1,7 +1,7 @@
 extends ../layout
 block head-css
-    <link rel="stylesheet" href="http://blueimp.github.io/Gallery/css/blueimp-gallery.css">
-    <link rel="stylesheet" href="http://blueimp.github.io/Gallery/css/blueimp-gallery-indicator.css">
+    <link rel="stylesheet" href="/assets/plugins/blueimp-gallery/css/blueimp-gallery.css">
+    <link rel="stylesheet" href="/assets/plugins/blueimp-gallery/css/blueimp-gallery-indicator.css">
 block content
     .row
         .col-md-12
@@ -38,7 +38,7 @@ block content
         ol.indicator
 
 block foot-js
-    <script src="http://blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
+    <script src="/assets/plugins/blueimp-gallery/js/jquery.blueimp-gallery.min.js"></script>
     script.
         $('.gallery a').on('click', function(e) {
             var $img = $(this);
