--- a/views/server/layout.jade
+++ b/views/server/layout.jade
@@ -16,7 +16,7 @@ html.no-js
         link(rel='stylesheet', href='/assets-admin/css/animate.css')
         // Custom styles for this theme
         link(rel='stylesheet', href='/assets-admin/css/main.css')
-        link(rel='stylesheet', href='/css/style.css')
+        link(rel='stylesheet', href='/assets-admin/css/style.css')
         block head-css
         // Feature detection
         script(src='/assets-admin/js/modernizr-2.6.2.min.js')
