--- a/views/server/content/item.jade
+++ b/views/server/content/item.jade
@@ -21,7 +21,10 @@ block content
                             a(href='#{image.url}')
                                 img(src='#{image.url}')
                 .content 
-                    | #{content.content}
+                    if (content.author && content.author.status === -1)
+                        | !{content.content}
+                    else 
+                        | #{content.content}
                 .comments
                     h2 评论
                     if(content.comments)
