--- a/views/server/content/item.jade
+++ b/views/server/content/item.jade
@@ -21,10 +21,11 @@ block content
                             a(href='#{image.url}')
                                 img(src='#{image.url}')
                 .content 
-                    if (content.author && content.author.status === -1)
-                        | !{content.content}
-                    else 
-                        | #{content.content}
+                    //- if (content.author && content.author.status === -1)
+                    //-     | !{content.content}
+                    //- else 
+                    //-     | #{content.content}
+                    | !{md(content.content)}
                 .comments
                     h2 评论
                     if(content.comments)
