--- a/views/app/page.jade
+++ b/views/app/page.jade
@@ -18,24 +18,24 @@ mixin pagination(pageInfo)
         - var query = pageInfo.query || {}
         - query.page = prevPage
         li(class=(currentPage === 1) ? 'disabled' : '')
-            a(href='?#{core.generateParamsByObj(query)}') &laquo;
+            a(href='?#{core.param(query)}') &laquo;
         if (currentPage - range >= 2)
             - query.page = 1
             li(class=(currentPage === 1) ? 'active' : '') 
-                a(href='?#{core.generateParamsByObj(query)}') 1
+                a(href='?#{core.param(query)}') 1
             li 
                 a ...
         - for (var i = 1; i <= totalPage; i ++)
             - query.page = i
             if(i >= Math.min(Math.max(currentPage - range, 1), totalPage - 2 * range) && i <= Math.max(Math.min(range + currentPage, totalPage), 2 * range))
                 li(class=(currentPage === i) ? 'active' : '') 
-                    a(href='?#{core.generateParamsByObj(query)}') #{i}
+                    a(href='?#{core.param(query)}') #{i}
         if (currentPage + range <= totalPage - 1 )
             li 
                 a ...
             - query.page = totalPage
             li(class=(currentPage === totalPage) ? 'active' : '') 
-                a(href='?#{core.generateParamsByObj(query)}') #{totalPage}
+                a(href='?#{core.param(query)}') #{totalPage}
         - query.page = nextPage
         li(class=(currentPage === totalPage) ? 'disabled' : '')
-            a(href='?#{core.generateParamsByObj(query)}') &raquo;
+            a(href='?#{core.param(query)}') &raquo;
