--- a/views/server/role/list.jade
+++ b/views/server/role/list.jade
@@ -24,7 +24,8 @@ block content
                             td
                                 | #{moment(role.created).format('LLL')}
                             td
-                                a.btn.btn-default.btn-xs(href='#{adminDir}/role/#{role.id}/edit') 编辑
+                                if (role.status !== 201)
+                                    a.btn.btn-default.btn-xs(href='#{adminDir}/role/#{role.id}/edit') 编辑
                                 | &nbsp;
                                 if (role.status !== 201 && role.status !== 202)
                                     a.btn.btn-danger.btn-xs(href='#{adminDir}/role/#{role.id}/del') 删除
