add baidu tongji

--- a/views/app/layout.jade
+++ b/views/app/layout.jade
@@ -23,3 +23,6 @@ html
         script(src='/assets/js/vendor/jquery-2.1.1.min.js')
         script(src='/assets/pluginsbootstrap/js/bootstrap.min.js')
         block foot-js
+        script.
+            var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+            document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F3a258fabccde554fc44cba951692bdde' type='text/javascript'%3E%3C/script%3E"));
