--- a/views/server/role/add.jade
+++ b/views/server/role/add.jade
@@ -8,7 +8,7 @@ block content
                     label 角色名
                     input.form-control(name='name')
                 .form-group
-                    label 动作
+                    label 权限
                     input.form-control(name='actions', placeholder='逗号分割')
                     //- .row
                     //-     .col-md-1
