--- a/views/server/role/edit.jade
+++ b/views/server/role/edit.jade
@@ -8,7 +8,7 @@ block content
                     label 名称
                     input.form-control(name='name', value='#{role.name}')
                 .form-group
-                    label 动作
+                    label 权限
                     input.form-control(name='actions', placeholder='逗号分割', value='#{role.actions}')
                     //- .row
                     //-     - each action in role.actions
