--- a/views/server/message.jade
+++ b/views/server/message.jade
@@ -6,4 +6,4 @@ block content
             .alert.alert-danger
                 | #{msg}
                 p
-                a.btn.btn-info(href='#{adminDir}') 回首页
+                a.btn.btn-info(href='#{adminDir}') 返回
