管理员的私人花园

--- a/views/server/layout.jade
+++ b/views/server/layout.jade
@@ -104,7 +104,7 @@ html.no-js
                                     i.fa.fa-angle-down
                                 ul.dropdown-menu.animated.fadeInDown
                                     li
-                                        a(href='#{adminDir}/index/me')
+                                        a(href='#{adminDir}/me')
                                             i.fa.fa-user
                                             |  个人资料
                                     //li
