--- a/views/server/me/edit.jade
+++ b/views/server/me/edit.jade
@@ -5,83 +5,46 @@ block content
         .col-md-12
             .panel.panel-default
                 .panel-heading
-                    a.pull-right(href='', title='编辑')
-                        span.glyphicon.glyphicon-edit
-                    | 管理员资料信息
-                ul.list-group
-                    li.list-group-item
-                        - var avatar = User.avatar || gravatar.url(User.email, {s: '100',r: 'x',d: 'retro'}, true)
-                        img.img-circle(src='#{avatar}', alt='')
-                    li.list-group-item
-                        .row
-                            .col-md-2
-                                strong 用户ID
-                            .col-md-10
-                                | #{user.id}
-                    li.list-group-item
-                        .row
-                            .col-md-2
-                                strong 名字
-                            .col-md-10
-                                | #{user.name}
-                    li.list-group-item
-                        .row
-                            .col-md-2
-                                strong 用户名
-                            .col-md-10
-                                | #{user.username}
-                    li.list-group-item
-                        .row
-                            .col-md-2
-                                strong 角色
-                            .col-md-10
-                                | #{user._roles}
-                    li.list-group-item
-                        .row
-                            .col-md-2
-                                strong 权限
-                            .col-md-10
-                                | #{user._actions}
-                    li.list-group-item
-                        .row
-                            .col-md-2
-                                strong Salt
-                            .col-md-10
-                                | #{user.salt}
-                    li.list-group-item
-                        .row
-                            .col-md-2
-                                strong Hashed_password
-                            .col-md-10
-                                | #{user.hashed_password}
-                    li.list-group-item
-                        .row
-                            .col-md-2
-                                strong 注册日期
-                            .col-md-10
-                                | #{moment(user.created).format('LLL')}
-    .row
-        .col-md-12
-            .panel.panel-info
-                .panel-heading
-                    | 修改密码
+                    h3.panel-title 修改我的信息
                 .panel-body
-                    form.form-horizontal(action='#{adminDir}/me/updatepwd', method='post')
+                    form.form-horizontal(role='form', action='#{adminDir}/me/edit', method='post')
                         .form-group
-                            label.col-md-2.text-right 旧密码
-                            .col-md-4
-                                input.form-control(type='password', name='oldpassword')
+                            label.col-sm-2.control-label(for='inputEmail2') 用户名
+                            .col-sm-10
+                                input#inputEmail2.form-control(type='text', name='username', value='#{user.username}', placeholder='用户名')
                         .form-group
-                            label.col-md-2.text-right 新密码
-                            .col-md-4
-                                input.form-control(type='password', name='password')
+                            label.col-sm-2.control-label(for='inputPassword4') 姓名
+                            .col-sm-10
+                                input#inputPassword4.form-control(type='text', name='name', value='#{user.name}', placeholder='姓名')
                         .form-group
-                            label.col-md-2.text-right 确认新密码
-                            .col-md-4
-                                input.form-control(type='password', name='repassword')
+                            label.col-sm-2.control-label(for='inputPassword5') Email
+                            .col-sm-10
+                                input#inputPassword5.form-control(type='email', name='email', value='#{user.email}' placeholder='Email')
+                        .form-group
+                            label.col-sm-2.control-label(for='inputPassword6') 手机号
+                            .col-sm-10
+                                input#inputPassword6.form-control(type='mobile', name='mobile', value='#{user.mobile || ""}' placeholder='手机号')
+
+                        .form-group
+                            label.col-sm-2.control-label(for='inputPassword5') 性别
+                            .col-sm-10
+                                select.form-control.input-sm(name='gender')
+                                    if (user.gender === '保密')
+                                        option(value='保密', selected) 保密
+                                    else 
+                                        option(value='保密') 保密
+                                    if (user.gender === '男')
+                                        option(value='男', selected) 男
+                                    else 
+                                        option(value='男') 男
+
+                                    if (user.gender === '女')
+                                        option(value='女', selected) 女
+                                    else 
+                                        option(value='女') 女
                         input(type='hidden', name='_csrf', value='#{token}')
                         .form-group
-                            .col-md-4.col-md-offset-2
+                            .col-sm-offset-2.col-sm-10
                                 button.btn.btn-primary(type='submit') 提交
 
                     
